make java 8 compatible